// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map render correctly Map on Main page 1`] = `
<section
  className="cities__map map"
  id="map"
/>
`;

exports[`Map render correctly Map on Main page without active card 1`] = `
<section
  className="cities__map map"
  id="map"
/>
`;

exports[`Map render correctly Map on Offer page 1`] = `
<section
  className="property__map map"
  id="map"
/>
`;
